@@ -7,6 +7,7 @@
 	* HilbertArray.eigvalsh
 	* HilbertArray.eigproj
 	* HilbertSpace.random_povm_element
+	* TensorSubspace.create_random_hermitian
 	* experimental: non-commutative graphs
 	* fixes for the way TensorSubspace deals with dtype, etc.
 	* CP_Map.krauses
